# traibox-alpha

./: .dockerignore  .env.example  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  eslint-suppressions.json  eslint.config.mjs  package.json  pnpm-lock.yaml  tsconfig.base.json  turbo.json
apps/trade-brain/: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt
apps/trade-brain/app/: __init__.py  core.py  eval_harness.py  llm.py  main.py  security.py
apps/trade-brain/app/agents/capital/: definition.py
apps/trade-brain/app/agents/framework/: assessment.py  authority.py  budget.py  definition.py  errors.py  policy.py  (+7 more)
apps/trade-brain/app/evidence/: policy.py  untrusted_input.py
apps/trade-brain/app/models/: anthropic_adapter.py  deterministic_adapter.py  port.py
apps/trade-brain/app/outcomes/: __init__.py  artifacts.py  binding_policy.py  catalogue.py  claims.py  definition.py  recommendation.py  runner.py  service.py  synthesis.py
apps/trade-brain/app/tools/: definition.py  invocation.py  policy.py  registry.py
apps/trade-brain/app/workbench/: catalogue.py  context.py  currency.py  decimal_policy.py  errors.py  hashing.py  registry.py  request.py  scenario.py  types.py  validators.py
apps/trade-brain/evals/: agent_scope_safety.jsonl  copilot_classification.jsonl  document_intelligence.jsonl  missing_proof_detection.jsonl  replay_eval_quality.jsonl
apps/trade-brain/tests/: test_agent_framework.py  test_core.py  test_eval_harness.py  test_llm.py  test_outcomes.py  test_security.py  test_workbench.py
(+422 files in other folders)
