[project]
name = "traibox-trade-brain"
version = "0.1.0"
description = "TRAIBOX Trade Brain alpha intelligence plane service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "httpx>=0.27,<1"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
